--- a/index.html
+++ b/index.html
@@ -4,19 +4,38 @@
   <meta charset="UTF-8" />
   <title>LLM Learning Lab</title>
   <style>
+    body {
+      background: #1a0033;
+      color: #eee;
+      font-family: Arial, sans-serif;
+      text-align: center;
+    }
     canvas {
-      background: #f0f0f0;
+      background: #2e004f;
       display: block;
       margin: 0 auto;
-      border: 1px solid #000;
+      border: 2px solid #8a2be2;
+    }
+    button {
+      background: #8a2be2;
+      border: none;
+      color: #fff;
+      padding: 8px 16px;
+      margin: 0 4px;
+      cursor: pointer;
+      font-size: 16px;
+    }
+    button:hover {
+      background: #6d1dbb;
     }
     #menu {
-      text-align: center;
       margin-bottom: 10px;
     }
     #controls {
-      text-align: center;
       margin-bottom: 10px;
+    }
+    input[type="range"] {
+      width: 300px;
     }
   </style>
 </head>
@@ -24,6 +43,7 @@
   <div id="menu">
     <button id="tokenTownBtn">Token Town</button>
     <button id="attentionArenaBtn">Attention Arena</button>
+    <button id="backBtn" style="display:none;">Back to Menu</button>
   </div>
   <div id="controls">
     <input id="angleSlider" type="range" min="0" max="360" value="0" style="display:none;">
